--- a/src/style.css
+++ b/src/style.css
@@ -522,16 +522,72 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.h-8 {
-  height: 2rem;
+.block {
+  display: block;
 }
 
-.bg-green-600 {
+.flex {
+  display: flex;
+}
+
+.h-\[75px\] {
+  height: 75px;
+}
+
+.h-\[43px\] {
+  height: 43px;
+}
+
+.content-center {
+  align-content: center;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.bg-slate-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
-.text-red-600 {
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
+.p-2 {
+  padding: 0.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.leading-75px {
+  line-height: 4.6875rem;
+}
+
+.leading-\[75px\] {
+  line-height: 75px;
+}
+
+.leading-\[43px\] {
+  line-height: 43px;
+}
+
+.hover\:bg-green-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
